Remove duplicate condition in CompositedLayerMapping::computeInterestRect().

BUG=626404

Review-Url: https://codereview.chromium.org/2124363002
Cr-Commit-Position: refs/heads/master@{#404326}

Former-commit-id: 969a37dbd59256d636d6a061c265686d314769b4